# LLM_wrapper

./: LICENSE  LICENSE_MODEL  MODELS.md  README.md  handle_checkpoints.py  lint.sh  pyproject.toml
llm_wrapper/: LLM_finetuning_script.py  LLM_inference_script.py  LLM_utils.py  REC_datasets.py  VLM_inference_script.py  config_llm_wrapper.py  inference_florence_2.py  naming_utils.py  utils.py
llm_wrapper/data/: create_3_refcoco_series_datasets.py  create_hcrefloco_dataset.py  create_talk2car_dataset.py
