[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm_wrapper"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.9.18"
authors = [
    { name = "Amaia Cardiel", email = "amaia.cardiel@valeo.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "accelerate==0.28.0",
    "addict==2.4.0",
    "datasets==2.18.0",
    "jsonpatch==1.33",
    "jsonpointer==2.4",
    "jsonschema==4.21.1",
    "jsonschema-specifications==2023.12.1",
    "tqdm==4.66.5",
    "matplotlib==3.8.0",
    "numpy==1.24.3",
    "peft==0.9.0",
    "pandas==2.1.0",
    "timm==0.9.7",
    "transformers==4.42.3",
    "trl==0.8.1",
    "tensorboard==2.13.0",
    "bitsandbytes==0.43.0",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-annotations",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-simplify",
    "isort",
    "ipython",
    "ipdb",
]
torch = [
    "torch==2.2.1",
    "torchvision==0.13.1+cu113",
]

[project.urls]
Homepage = "https://github.com/valeoai/LLM_wrapper"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 127
target-version = ['py39']
include = '\.py?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 127
skip_gitignore = true
